--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,3 @@
-name: CI
-
-on:
-  push:
-    branches:
-      - main
-
-permissions:
-  id-token: write
-  contents: write
-  issues: write
-  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -35,6 +23,8 @@ jobs:
         run: |
           VERSION=${{ steps.semantic.outputs.new_release_version }}
           
+          TAGS="${{ vars.DOCKERHUB_USERNAME }}/iota:$VERSION"
+
           TAGS="$TAGS,${{ vars.DOCKERHUB_USERNAME }}/iota:latest"
           
           echo "tags=$TAGS" >> $GITHUB_OUTPUT
